* add: 生鲜板块首页获取“商品分类列表、轮播图、促销商品”的接口 * add: 获取商品详情的接口
