# app/api/v1/router/router.go
@@ -15,29 +15,32 @@ func InitRouter() *gin.Engine {
 	engine.Use(ginzap.Ginzap(zap.L(), time.RFC3339, true))
 	engine.Use(ginzap.RecoveryWithZap(zap.L(), true))
 
-	g := engine.Group("/api/v1")
-	g.Use(middlewares.TracerWrapper)
+	v1 := engine.Group("/api/v1")
+	v1.Use(middlewares.TracerWrapper)
 	{
 		/******* 短信服务 *******/
 		// 短信验证码
-		g.POST("/smscode", handler.SendSmsCode)
+		v1.POST("/smscode", handler.SendSmsCode)
 
 		/******* 用户相关的服务 *******/
-		// 检查手机号(用户名)是否已注册
-		g.POST("/user/checkMobile", handler.CheckMobile)
-		// 注册
-		g.POST("/user/register", handler.Register)
-		// 登录
-		g.POST("/user/login", handler.Login)
-
-		g.Use(middlewares.Auth())
-
-		g.GET("/hello", func(c *gin.Context) {
-			c.JSON(200, "hello world !!!")
-		})
+		u := v1.Group("user")
+		{
+			// 检查手机号(用户名)是否已注册
+			u.POST("checkMobile", handler.CheckMobile)
+			// 注册
+			u.POST("register", handler.Register)
+			// 登录
+			u.POST("login", handler.Login)
+		}
 
 		/******* 商品服务 *******/
-
+		g := v1.Group("goods")
+		// token 校验
+		g.Use(middlewares.Auth())
+		{
+			g.GET("freshGoodsIndex", handler.GetFreshGoodsIndex)
+			g.GET("goodsDetail/:id", handler.GetGoodsDetail)
+		}
 	}
 
 	return engine
